# imageproc

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  GEMINI.md  README.md
.github/: copilot-instructions.md
base/: CMakeLists.txt
base/include/base/: bounds.hpp  types.hpp
imageprocessing/: CMakeLists.txt
imageprocessing/include/imageprocessing/: connected_components.hpp  contrasting.hpp  gemm_cv.hpp  highlights.hpp  integral_image.hpp  reflection_removal.hpp  thresholding.hpp
imageprocessing/src/: connected_components.cpp  contrasting.cpp  gemm_cv.cpp  highlights.cpp  integral_image.cpp  reflection_removal.cpp  thresholding.cpp
imageprocessing/src/doc/: niblack.md
imageprocessing/src/tests/: niblack_integral_tests.cpp  thresholding_tests.cpp
runner/: CMakeLists.txt
runner/src/: main.cpp
